--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,3 +13,4 @@ prettytable-rs = "^0.10"
 urlencoding = "2.1.3"
 csv = "1.1"
 clap = { version = "4.3.19", features = ["derive"] }
+tabled = "0.14.0"
